# hca-ingest-tools

./: .gitignore  .release-please-manifest.json  Makefile  README.md  get_test_hash.py  pyproject.toml  release-please-config.json
.github/workflows/: publish-smart-sync.yml  release-please.yml  smart-sync-ci.yml
docs/: smart-sync-guide.md
redux/: README.md  pyproject.toml
redux/src/redux_cli/: __init__.py  main.py
smart-sync/: Makefile  README.md  pyproject.toml
smart-sync/docs/: smart-sync-guide.md
smart-sync/smart-sync/: CHANGELOG.md
smart-sync/src/hca_smart_sync/: __init__.py  cli.py  config_manager.py  manifest.py  sync_engine.py
smart-sync/src/hca_smart_sync/config/: __init__.py
smart-sync/tests/: test_cli.py  test_config.py  test_config_manager.py  test_smart_sync.py  test_sync_engine.py
src/hca_ingest/: __init__.py
src/hca_ingest/config/: __init__.py
src/hca_ingest/smart_sync/: __init__.py  cli.py  manifest.py  sync_engine.py
tests/: test_cli.py  test_config.py  test_smart_sync.py  test_sync_engine.py
