[tool.poetry]
name = "redux-cli"
version = "0.1.0"
description = "CLI playground for experimenting with Typer patterns"
authors = ["HCA Team <team@example.com>"]
readme = "README.md"
packages = [{include = "redux_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
redux = "redux_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
